# api-x402/app/api/x402-well-known/route.ts
@@ -4,10 +4,10 @@ export async function GET() {
   return NextResponse.json({
     version: 1,
     resources: [
-      'GET /api/events',
-      'GET /api/sponsors',
-      'GET /api/prizes',
-      'GET /api/projects',
+      'POST /api/events',
+      'POST /api/sponsors',
+      'POST /api/prizes',
+      'POST /api/projects',
     ],
   })
 }
